# rxplus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  client.py  devlog.md  environment.yml  main  pyaudio.py  pyproject.toml  reqs.txt  requirements.txt  server.py
.github/workflows/: test.yml
ADR/: 2025-08-28-rxws-use-multi-thread.md  2026-01-27-logging-philosophy.md
docs/: audio.md  cli.md  components.md  duplex.md  gateway.md  logging.md  main.md  operators.md  telemetry.md  utilities.md  video.md  websocket.md
docs/plans/: 2026-02-01-audio-video-feature-enhancements.md  2026-02-01-audio-video-test-infrastructure.md  2026-02-02-ws-connection-state-observable.md  logsink-source-scope-mapping.md  otel-logging-integration.md  remove-logcomp-refactor.md  remove-logging-use-otel-directly.md  rxws-refinements.md
docs/proposals/: 2026-02-01-audio-video-enhancements.md  2026-02-02-ws-disconnection-behavior-refinement.md  2026-02-20-rxplus-design-refinement-critique.md  2026-02-20-rxplus-design-refinement.md  logger-simplification.md  remove-logging-use-otel-directly.md
docs/research/: 2026-02-01-video-audio-components.md  logging-system-research.md  rxws-components.md
examples/: ws_example.py
rxplus/: __init__.py  audio.py  cli.py  duplex.py  graphic.py  log_context.py  logging.py  mechanism.py  opt.py  telemetry.py  utils.py  ws.py
rxplus/gateway/: __init__.py  connection.py  framing.py  node.py  overflow.py  stream.py
rxplus/telemetry/: __init__.py  config.py  exporters.py  logger.py  metrics.py  tracing.py
rxplus/ws/: __init__.py  _otel_mixin.py  client.py  client_group.py  datatypes.py  server.py
src/: ws.py
tasks/: task_cli.py  task_jpeg_client.py  task_mic_server.py  task_np_matrix_client.py  task_np_matrix_server.py  task_screen_capture.py  task_screen_capture_server.py  task_speaker_client.py  task_wavfile_client.py  task_wavfile_server.py  task_wsclient.py  task_wsclient_group.py  task_wsserver.py
tests/: conftest.py  test_audio.py  test_cli.py  test_duplex.py  test_graphic.py  test_logging.py  test_mechanism.py  test_opt.py  test_optional_deps.py  test_telemetry.py  test_utils.py  test_ws.py
